@@ -3,6 +3,9 @@ partman (62) UNRELEASED; urgency=medium
   * Joshua Kwan
     - Call ped_disk_commit_to_dev after creating filesystem to fix sparc
       breakage. closes: #283303
+  * Anton Zinoviev
+    - Applied patch by Jurij Smakov to add new command GET_DISK_TYPE in
+      parted_server, closes: #287931.
 
  -- Joshua Kwan <joshk@triplehelix.org>  Sun, 26 Dec 2004 11:53:11 -0800
 
